; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_fhci-hcd.c_fhci_usb_enable.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_fhci-hcd.c_fhci_usb_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fhci_hcd = type { %struct.fhci_usb* }
%struct.fhci_usb = type { i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32, i32, i32 }

@USB_MODE_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fhci_hcd*)* @fhci_usb_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fhci_usb_enable(%struct.fhci_hcd* %0) #0 {
  %2 = alloca %struct.fhci_hcd*, align 8
  %3 = alloca %struct.fhci_usb*, align 8
  store %struct.fhci_hcd* %0, %struct.fhci_hcd** %2, align 8
  %4 = load %struct.fhci_hcd*, %struct.fhci_hcd** %2, align 8
  %5 = getelementptr inbounds %struct.fhci_hcd, %struct.fhci_hcd* %4, i32 0, i32 0
  %6 = load %struct.fhci_usb*, %struct.fhci_usb** %5, align 8
  store %struct.fhci_usb* %6, %struct.fhci_usb** %3, align 8
  %7 = load %struct.fhci_usb*, %struct.fhci_usb** %3, align 8
  %8 = getelementptr inbounds %struct.fhci_usb, %struct.fhci_usb* %7, i32 0, i32 1
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 2
  %13 = call i32 @out_be16(i32* %12, i32 65535)
  %14 = load %struct.fhci_usb*, %struct.fhci_usb** %3, align 8
  %15 = getelementptr inbounds %struct.fhci_usb, %struct.fhci_usb* %14, i32 0, i32 1
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 1
  %20 = load %struct.fhci_usb*, %struct.fhci_usb** %3, align 8
  %21 = getelementptr inbounds %struct.fhci_usb, %struct.fhci_usb* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = call i32 @out_be16(i32* %19, i32 %22)
  %24 = load %struct.fhci_usb*, %struct.fhci_usb** %3, align 8
  %25 = getelementptr inbounds %struct.fhci_usb, %struct.fhci_usb* %24, i32 0, i32 1
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 0
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  %30 = load i32, i32* @USB_MODE_EN, align 4
  %31 = call i32 @setbits8(i32* %29, i32 %30)
  %32 = call i32 @mdelay(i32 100)
  ret i32 0
}

declare dso_local i32 @out_be16(i32*, i32) #1

declare dso_local i32 @setbits8(i32*, i32) #1

declare dso_local i32 @mdelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
